--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ nav{
 	color: white;
 	justify-content: flex-end;
 	align-items: center;
+	padding-right: 15px;
 }
 nav div{
 	margin: 0 5px;
@@ -50,6 +51,7 @@ main .teamHeading{
 }
 main .team{
 	justify-content: space-around;
+	margin-top: 20px;
 }
 main .member{
 	flex-direction: column;
@@ -57,9 +59,11 @@ main .member{
 	font-size: 26px;
 	font-weight: bold;
 	letter-spacing: 2px;
+	width: 35%;
+	max-width: 450px;
 }
 .member img{
-	width: 85%;
+	width: 100%;
 }
 
 footer{
