--- a/style.css
+++ b/style.css
@@ -14,12 +14,19 @@
 /*_____________Header both pages_________*/
 header{
 	height: 90px;
-	justify-content: center;
-	align-items: center;
-	background-color: #f4f4f4;
+	justify-content: flex-start;
+	align-items: flex-end;
+	background-color: #9cbbb0;
 	padding-bottom: 10px;
-	color: #e78244;
+	color: #3f3536;
 	font-size: 40px;
+}
+header .imgCon{
+	height: 90px;
+	margin-left: 15%;
+}
+header .imgCon img{
+	width: 100px;
 }
 header span{
 	font-weight: bold;
@@ -30,7 +37,7 @@ nav{
 	color: white;
 	justify-content: flex-end;
 	align-items: center;
-	padding-right: 15px;
+	padding-right: 15%;
 }
 nav div{
 	margin: 0 5px;
@@ -39,8 +46,9 @@ nav div{
 /*_____________Header both pages END_________*/
 
 .indexMain{
-	background-color: white;
-	color: #ffffff;
+	background-color: transparent;
+	color: black;
+
 }
 main .teamHeading{
 	color: #2d4452;
@@ -48,6 +56,14 @@ main .teamHeading{
 	font-weight: bold;
 	font-size: 40px;
 	padding: 10px 0;
+}
+main .text-teamCon{
+	/*flex-direction: row;*/
+}
+main .textBox{
+	border: solid 1px green;
+	height: 400px;
+	width: 400px;
 }
 main .team{
 	justify-content: space-around;
@@ -60,7 +76,7 @@ main .member{
 	font-weight: bold;
 	letter-spacing: 2px;
 	width: 35%;
-	max-width: 450px;
+	max-width: 350px;
 }
 .member img{
 	width: 100%;
@@ -68,12 +84,13 @@ main .member{
 
 footer{
 	height: 80px;
-	background-color: #f4f4f4;
+	background-color: #2d4452;
 	justify-content: center;
 	align-items: center;
+	color: white;
 }
 footer .slogan{
-	font-size: 22px;
+	font-size: 34px;
 	font-style: italic;
 	font-family: Chewy;
 	font-weight: bold;
@@ -101,4 +118,9 @@ main .teamMember{
 footer .memberFooter p{
 	margin: 0 15px;
 	font-style: italic;
+}
+body{
+	background-image: url("img/background_cityblur.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
