--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ main .textBox{
 	color: white;
 	padding: 15px;
 	text-shadow:-1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	font-size: 28px;
+	text-align: center;
+
 }
 main .textBox::before{
 	content: "";
