--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@
 	margin: 0;
 	padding: 0;
 	font-family: Georgia, Arial;
+	z-index: 1;
+}
+.backCon{
+	position: relative;
 }
 .container{
 	width: 80%;
 	max-width: 1200px;
 	margin: 0 auto;
+	position: relative;
 }
 .flexCon{
 	display: flex;
@@ -26,12 +31,18 @@
 	display: none;
 	background-repeat: no-repeat;
 	background-size: cover;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: -1
 }
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: .5s;
+  -webkit-animation-duration: 2s;
   animation-name: fade;
-  animation-duration: .5s;
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes fade {
@@ -209,8 +220,10 @@ footer .memberFooter p{
 	font-style: italic;
 }
 
+/*___________ Responsiveness __________*/
 @media screen and (max-width: 750px){
 	.text-teamCon{
 		flex-direction: column;
 	}
 }
+/*___________ Responsiveness END __________*/
