--- a/style.css
+++ b/style.css
@@ -21,10 +21,13 @@
   background-image: url("img/background_cityblur.jpg");
 }
 #slide2 {
-  background-image: url("http://www.teachingforecojustice.org/images/top3.jpg");
+  background-image: url("img/background_1.jpg");
 }
 #slide3 {
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv9CugZyLLIYMhqrTDybrMBvgcpZAegnbVLyuW090KtCfpw3I8");
+  background-image: url("img/background_2.jpg");
+}
+#slide4 {
+  background-image: url("img/background_3.jpg");
 }
 .backgrounds{
 	display: none;
@@ -45,12 +48,12 @@
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .6} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: .6} 
   to {opacity: 1}
 }
 /*____________carousel End__________*/
