--- a/style.css
+++ b/style.css
@@ -74,12 +74,30 @@ header .logoCon{
 }
 header .logoCon img{
 	width: 100px;
-	cursor: pointer;
 }
 header span{
 	font-weight: bold;
 }
-nav{
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: yellow;
+  color: black;
+}
+
+/*nav{
 	height: 30px;
 	background-color: #2d4452;
 	color: white;
@@ -89,7 +107,7 @@ nav{
 }
 nav div{
 	margin: 0 5px;
-}
+} */
 
 /*_____________Header both pages END_________*/
 
@@ -104,7 +122,7 @@ main .teamHeading{
 	font-weight: bold;
 	font-size: 40px;
 	padding: 10px 0;
-	text-shadow: -1px 1px 1px black;
+	text-shadow: -1px 1px 1px yellow;
 }
 main .text-teamCon{
 	justify-content: center;
